fix #1568 Checkboxes and Radios didn't work on IE with JAWS activated
AT-1242
CR 08528144

--- a/src/aria/widgets/GlobalStyle.tpl.css
+++ b/src/aria/widgets/GlobalStyle.tpl.css
@@ -140,6 +140,18 @@
     float: left;
 }
 
+.xSROnly {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+    outline: none;
+}
+
 {/macro}
 
 {/CSSTemplate}
